# cantil

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cantil_Logo.txt  LICENSE  README.md  requirements.txt
common/cbor/: cantil_cbor.c  cantil_cbor.h
contrib/: names.txt  www.ssa.gov - Top Baby Names for 2025.html
docs/: .gitignore  CHANGELOG.md  build-and-release.md  button_ui.md  competitor-comparison.md  fips_discussion_2026-05-18.md  firmware-architecture.md  imu-debug-timeline.md  marketing.md  open-questions.md  pqc_analysis.md  roadmap.md  secure_pairing.md  storage.md  transport-and-pairing.md  transport-security.md
docs/ca/: 01-cbor-foundation.md  02-sign-csr.md  03-get-ca-serial.md  04-list-certs.md  05-revoke-cert.md  06-auto-expire.md  07-list-keys.md  08-gen-key.md  09-delete-key.md  10-protect-slot.md  11-gen-key-csr.md  12-push-key-cert.md  13-sign-csr-slot.md  14-sign-key-slot.md  15-get-ca-chain.md  16-session-cert-csr.md  17-sign-session-from-slot.md  18-push-session-cert.md  19-client-bond-management.md  20-pairing-passkey-reply.md
docs/reference/: architecture.md  gesture-and-led.md  hardware.md  protocol-and-client.md
docs/roadmap/: bootloader-tiers.md  firmware-update.md  mcuboot-validation.md  userspace-separation.md
firmware/: CMakeLists.txt  Kconfig  pm_static_xiao_ble_nrf52840_sense.yml  pm_static_xiao_ble_nrf52840_sense_mcuboot.yml  prj.conf  prj_accelerated.conf  prj_pdm_smoketest.conf  session_x509.toml  west.yml
firmware/boards/: adafruit_feather_nrf52840.conf  adafruit_feather_nrf52840.overlay  generic_nrf52840.conf  generic_nrf52840.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay  xiao_ble_nrf52840_sense.conf  xiao_ble_nrf52840_sense.overlay  xiao_ble_nrf52840_sense_diag.conf  xiao_ble_nrf52840_sense_mcuboot.conf  xiao_ble_nrf52840_sense_mcuboot.overlay  xiao_ble_nrf52840_sense_pdm_smoketest.conf  xiao_ble_nrf52840_sense_pdm_smoketest.overlay  xiao_ble_nrf52840_sense_rehearsal.conf  xiao_ble_nrf52840_sense_release.conf
firmware/dts/bindings/: cantil,tap-button.yaml
firmware/include/: cantil_mbedtls_user_config.h
firmware/src/: diag_boot.c  main.c
firmware/src/ca/: ca.c  ca.h
firmware/src/clients/: client_bond.c  client_bond.h  pairing.c  pairing.h
firmware/src/crypto/: crypto.c  crypto.h  crypto_psa.c
firmware/src/fw_update/: fw_update.c  fw_update.h
firmware/src/gesture/: gesture.c  gesture.h  tap_button.c  tap_imu.c  tap_mic.c
firmware/src/led/: led.c  led.h
firmware/src/names/: names.c  names.h  names_data.c  names_data.h
firmware/src/pdm_smoketest/: pdm_smoketest.c
firmware/src/protocol/: protocol.c  protocol.h
firmware/src/session/: noise_crypto.h  noise_crypto_mbedtls.c  noise_crypto_psa.c  session.c  session.h  session_slot.c  session_slot.h  session_x509.h  test_inject.h
firmware/src/storage/: storage.c  storage.h
firmware/src/transport/: transport.c  transport.h  transport_ble.c  transport_usb.c
firmware/sysbuild/: mcuboot.conf  mcuboot.overlay
firmware/tests/ca_bootstrap/: CMakeLists.txt  Kconfig
firmware/tests/ca_bootstrap/boards/: native_sim.overlay
firmware/tests/ca_bootstrap/src/: main.c
firmware/tests/client_bond/: CMakeLists.txt  Kconfig  prj.conf
firmware/tests/client_bond/src/: main.c
firmware/tests/crl_der/: CMakeLists.txt  Kconfig  prj.conf  smoke_openssl.sh
firmware/tests/crl_der/src/: main.c
firmware/tests/noise_crypto/: CMakeLists.txt  gen_vectors.py  prj.conf
firmware/tests/noise_crypto/src/: main.c  vectors.h
firmware/tests/noise_session/: CMakeLists.txt  Kconfig  gen_cacophony_vector.py  gen_xx_vector.py  noise_xx_ref.py  prj.conf
firmware/tests/noise_session/src/: loopback.c  loopback.h  main.c  main_cacophony.c  noise_session_tests.inc  test_inject.c  test_inject_ctl.h  xx_vector.h  xx_vector_cacophony.h
firmware/tests/noise_session/vectors/: ATTRIBUTION.md  cacophony_xx_25519_chachapoly_sha256.json
firmware/tests/pairing/: CMakeLists.txt  Kconfig  prj.conf
firmware/tests/pairing/src/: gesture_stub.c  main.c
firmware/tests/pairing_ca_anchor/: CMakeLists.txt  Kconfig  prj.conf
firmware/tests/pairing_ca_anchor/boards/: native_sim.overlay
firmware/tests/pairing_ca_anchor/src/: main.c  session_stub.c
firmware/tests/pairing_ca_anchor_passkey/: CMakeLists.txt  Kconfig  prj.conf
firmware/tests/pairing_ca_anchor_passkey/boards/: native_sim.overlay
firmware/tests/pairing_ca_anchor_passkey/src/: gesture_stub.c  led_stub.c  main.c  session_stub.c
firmware/tests/pairing_passkey/: CMakeLists.txt  Kconfig  prj.conf
firmware/tests/pairing_passkey/boards/: native_sim.overlay
firmware/tests/pairing_passkey/src/: gesture_stub.c  led_stub.c  main.c  session_stub.c
firmware/tests/protocol_cbor/: CMakeLists.txt  prj.conf
firmware/tests/protocol_cbor/src/: main.c
firmware/tests/session_chain/: CMakeLists.txt  Kconfig  prj.conf
firmware/tests/session_chain/src/: chain_ctl.h  main.c  test_inject.c
firmware/tests/session_recovery/: CMakeLists.txt  Kconfig  prj.conf
firmware/tests/session_recovery/src/: main.c
firmware/tests/session_slot/: CMakeLists.txt  Kconfig  prj.conf
firmware/tests/session_slot/src/: main.c
firmware/tests/sign_csr/: CMakeLists.txt  Kconfig
firmware/tests/sign_csr/src/: main.c
internal/: README.md  hsm_positioning.md
libcantil/: CMakeLists.txt
libcantil/cli/: main.c
libcantil/completions/: _cantil  cantil.bash
libcantil/include/: cantil.h  cantil_random.h
libcantil/man/: cantil.1
libcantil/src/: ca.c  clients.c  device.c  discover_usb.c  internal.h  key_store.c  key_store.h  pairing.c  session.c  transport.c  transport_usb.c  trust.c  trust.h
scripts/: build-appimage.sh  build.sh  dbox.sh  encode_session_x509.py  export_transcript.sh  extract_names.py  gen_names_data.py  provision_fw_signing_cert.sh  publish-prep.sh  publish.sh  test.sh  test_encode_session_x509.py  test_serial.py  watch_acm.py
